# cs-agent-service

./: .coverage  .env.example  .gitignore  .mcp.json  .pre-commit-config.yaml  API_ENDPOINTS_FLOW_DETAILS.md  Dockerfile  GEMINI.md  README.md  cloudbuild.yaml  demo_client.py  demo_discovery.py  docker-compose.yml  example_full.py  memory.md  multi-agent-architectures.md  opencode.json  pyproject.toml  register_agents.py  requirements.txt  test_content_import.py  test_hook.sh  test_invoke.py  test_methods.py  test_run.py  test_types.py
devops/: Dockerfile  __init__.py  __main__.py  agent.py  agent_card.py  config.py  executor.py  settings.toml
docs/: ADR-001-arquitectura-agentes.md  ADR-002-mejoras-slm-orchestration.md  ADR-003-nodos-ultraligeros-zeroclaw.md  mcp-tools.md  prompt-ref-flow.html
models/: capabilities.py
prompts/: coordinator.txt  hub.txt  researcher.txt  writer.txt
registry_api/: Dockerfile  main.py  storage.py  tracing.py
reusable/docker/: Dockerfile  Dockerfile.discovery
reusable/prompts/: analyzer.txt  computer.txt  discovery.txt  searcher.txt
reusable/src/: __init__.py  __main__.py  agent.py  discovery_agent.py  discovery_main.py
src/: .!48139!prompt_resolver.py  __init__.py  __main__.py  agent.py  agent_executor.py  agent_factory.py  config.py  mcp_config.py  mcp_tool_loader.py  phoenix_client.py  prompt_resolver.py  tracing.py
src/tools/: __init__.py  (+1 more)
tests/: conftest.py  inspect_adk.py  inspect_run.py  search_adk.py  test_a2a_client.py  test_adk.py  test_executor.py  test_prompt_resolver.py  test_run.py  test_runner.py
(+7 files in other folders)
